# shspe

./: .gitignore  .tags  CMakeLists.txt  Makefile  Pozadi.root  README.md  autoload_libs.C  bidim_unodm.root  compile.C  cuts_manip.h  graphs.root  kibbler_fit.C  kibbler_gdir.C  perlweb9505peaks  pytest.py  repeatall  sh_counters.C  sh_cuts.C  sh_cuts.h  sh_graph.C  sh_graph.h  sh_menu.C  sh_menu.h  sh_saveobj.C  sh_saveobj.h  sh_tnamed.C  sh_tnamed.h  sh_ver.h.in  shspe.C  shspe.h  shspe_mysql
Mysql/: insertruns  mg26runs.txt  perlweb9505peaks  shspe_mysql
docs/: calibration.md  openfile.md  savefile.md  startstop.md
init_scripts/: install_initscripts  rootlogon  rootrc
